Correccion de varios warnigs